{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 350,
  "lineage": "ae437f2e-c17e-9a0d-68a4-1661af35f7f7",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "heating",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:261455938840:instance/i-07e38bf6a62ccc573",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "project_instance_profile",
            "id": "i-07e38bf6a62ccc573",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a27849951a01772e",
            "private_dns": "ip-10-0-2-238.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.238",
            "public_dns": "ec2-18-132-45-245.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.45.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02117edf23ffd36ac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095bf970c8818e174",
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02888394e29f2f351",
              "sg-0ba401275d9e8aff0",
              "sg-0d1259b1a720b5664",
              "sg-0e611db2ec8398e75"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "lighting",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:261455938840:instance/i-0475b24d4864d73b9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "project_instance_profile",
            "id": "i-0475b24d4864d73b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06697c0c9b82818e1",
            "private_dns": "ip-10-0-1-32.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-3-8-2-207.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.2.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e72e746f5fface1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa6e2eac7d40c81e",
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02888394e29f2f351",
              "sg-0ba401275d9e8aff0",
              "sg-0d1259b1a720b5664",
              "sg-0e611db2ec8398e75"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "status",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ec351898b2d71a9",
            "arn": "arn:aws:ec2:eu-west-2:261455938840:instance/i-097320df861c4475c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "project_instance_profile",
            "id": "i-097320df861c4475c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-054ba8cbdf0f72e44",
            "private_dns": "ip-10-0-3-196.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.196",
            "public_dns": "ec2-18-134-97-143.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.97.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e213693184df318",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf1f8b508c5c4e99",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02888394e29f2f351",
              "sg-0ba401275d9e8aff0",
              "sg-0d1259b1a720b5664",
              "sg-0e611db2ec8398e75"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:loadbalancer/app/project-lb/2c9a5da84e6b8503",
            "arn_suffix": "app/project-lb/2c9a5da84e6b8503",
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-lb-172149828.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:loadbalancer/app/project-lb/2c9a5da84e6b8503",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02888394e29f2f351",
              "sg-0ba401275d9e8aff0",
              "sg-0d1259b1a720b5664",
              "sg-0e611db2ec8398e75"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-095bf970c8818e174"
              },
              {
                "subnet_id": "subnet-0bf1f8b508c5c4e99"
              },
              {
                "subnet_id": "subnet-0fa6e2eac7d40c81e"
              }
            ],
            "subnets": [
              "subnet-095bf970c8818e174",
              "subnet-0bf1f8b508c5c4e99",
              "subnet-0fa6e2eac7d40c81e"
            ],
            "vpc_id": "vpc-055725cb6c1be16a7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/status/42b6b36246a8ba2f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:loadbalancer/app/project-lb/2c9a5da84e6b8503",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb.application_load_balancer",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "target_group_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "heating",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/heating/8868d7717e44fd0c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener-rule/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33/5574f2f065f157cf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener-rule/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33/5574f2f065f157cf",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb.application_load_balancer",
            "module.load_balancer.aws_lb_listener.http_listener",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "lighting",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/lighting/b1139bbdf66d9b39",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener-rule/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33/6563e746f8d9cc06",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lighting/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener-rule/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33/6563e746f8d9cc06",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb.application_load_balancer",
            "module.load_balancer.aws_lb_listener.http_listener",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "status",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/status/42b6b36246a8ba2f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener-rule/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33/2db12a510484fb29",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener-rule/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33/2db12a510484fb29",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:listener/app/project-lb/2c9a5da84e6b8503/e9297f4cd365af33",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb.application_load_balancer",
            "module.load_balancer.aws_lb_listener.http_listener",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "heating",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/heating/8868d7717e44fd0c",
            "arn_suffix": "targetgroup/heating/8868d7717e44fd0c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/heating/8868d7717e44fd0c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "heating",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "lighting",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/lighting/b1139bbdf66d9b39",
            "arn_suffix": "targetgroup/lighting/b1139bbdf66d9b39",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lighting/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/lighting/b1139bbdf66d9b39",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lighting",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "status",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/status/42b6b36246a8ba2f",
            "arn_suffix": "targetgroup/status/42b6b36246a8ba2f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/status/42b6b36246a8ba2f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "status",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "heating",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/heating/8868d7717e44fd0c-20231207222629688000000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/heating/8868d7717e44fd0c",
            "target_id": "i-07e38bf6a62ccc573"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "lighting",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/lighting/b1139bbdf66d9b39-20231207222629687600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/lighting/b1139bbdf66d9b39",
            "target_id": "i-0475b24d4864d73b9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        },
        {
          "index_key": "status",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/status/42b6b36246a8ba2f-20231207222629686800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:261455938840:targetgroup/status/42b6b36246a8ba2f",
            "target_id": "i-097320df861c4475c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app.aws_instance.app_server",
            "module.app.data.aws_ami.ubuntu",
            "module.app.data.aws_iam_instance_profile.app-instance_profile",
            "module.app.data.aws_iam_policy.dynamodb_policy",
            "module.load_balancer.aws_lb_target_group.target_groups",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:internet-gateway/igw-0aa24b41de293de78",
            "id": "igw-0aa24b41de293de78",
            "owner_id": "261455938840",
            "tags": {
              "Name": "project_igw"
            },
            "tags_all": {
              "Name": "project_igw"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "local",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:route-table/rtb-05ad2bc5f1847159b",
            "id": "rtb-05ad2bc5f1847159b",
            "owner_id": "261455938840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa24b41de293de78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "local_rt"
            },
            "tags_all": {
              "Name": "local_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:route-table/rtb-0d151f714312bdb91",
            "id": "rtb-0d151f714312bdb91",
            "owner_id": "261455938840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa24b41de293de78",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b046d92c4b1b15a5",
            "route_table_id": "rtb-0d151f714312bdb91",
            "subnet_id": "subnet-0fa6e2eac7d40c81e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca53bdd986f9ed3f",
            "route_table_id": "rtb-0d151f714312bdb91",
            "subnet_id": "subnet-095bf970c8818e174"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09565b83a216799f5",
            "route_table_id": "rtb-0d151f714312bdb91",
            "subnet_id": "subnet-0bf1f8b508c5c4e99"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:subnet/subnet-00cd87d4c9e9ecd6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cd87d4c9e9ecd6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261455938840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet0"
            },
            "tags_all": {
              "Name": "private_subnet0"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:subnet/subnet-0d9154cd94d3f76aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9154cd94d3f76aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261455938840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:subnet/subnet-0f1de75c1c7bc6fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1de75c1c7bc6fd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261455938840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:subnet/subnet-0fa6e2eac7d40c81e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa6e2eac7d40c81e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261455938840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet0"
            },
            "tags_all": {
              "Name": "public_subnet0"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:subnet/subnet-095bf970c8818e174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095bf970c8818e174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261455938840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:subnet/subnet-0bf1f8b508c5c4e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf1f8b508c5c4e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261455938840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:vpc/vpc-055725cb6c1be16a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-05af9bc77162bbd84",
            "default_route_table_id": "rtb-0c1b2bd48d6affd3e",
            "default_security_group_id": "sg-096547c43ae0cb80e",
            "dhcp_options_id": "dopt-0401ed1619688d686",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055725cb6c1be16a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1b2bd48d6affd3e",
            "owner_id": "261455938840",
            "tags": {
              "Name": "project_vpc"
            },
            "tags_all": {
              "Name": "project_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:security-group/sg-0d1259b1a720b5664",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1259b1a720b5664",
            "ingress": [],
            "name": "allow_egress",
            "name_prefix": "",
            "owner_id": "261455938840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_egress"
            },
            "tags_all": {
              "Name": "allow_egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:security-group/sg-0e611db2ec8398e75",
            "description": "Allow http inbound traffic",
            "egress": [],
            "id": "sg-0e611db2ec8398e75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "261455938840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:security-group/sg-02888394e29f2f351",
            "description": "Allow https inbound traffic",
            "egress": [],
            "id": "sg-02888394e29f2f351",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "261455938840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:261455938840:security-group/sg-0ba401275d9e8aff0",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0ba401275d9e8aff0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "5.70.53.91/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "261455938840",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-055725cb6c1be16a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2915799184",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d1259b1a720b5664",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_egress"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1099474940",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e611db2ec8398e75",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_http"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2798556901",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02888394e29f2f351",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_https"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-808335522",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba401275d9e8aff0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3001,
            "id": "sgrule-2007740592",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba401275d9e8aff0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "5.70.53.91/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-559542972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ba401275d9e8aff0",
            "security_group_rule_id": "sgr-02af88df7f139e589",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc",
            "module.security.aws_security_group.allow_ssh"
          ]
        }
      ]
    }
  ]
}